230608-nutri_search.html, admin_nutri_list.html, login.html-1차 완성(nutri_search - 파일 이름 수정, 기능별 버튼 / login - 폼 완성 / admin_nutri_list - 테이블, 추가버튼 완성)

--- a/html/nutri_search.html
+++ b/html/nutri_search.html
@@ -20,13 +20,7 @@
             aria-label="어떤 의약품을 찾고 계신가요?"
             aria-describedby="button-addon2"
           />
-          <button
-            class="btn btn-outline-secondary"
-            type="submit"
-            id="button-addon2"
-          >
-            검색
-          </button>
+          <button class="btn" type="submit" id="button-addon2">검색</button>
         </div>
       </form>
       <div class="recommend">
@@ -50,17 +44,13 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <div class="card-title row justify-content-between m-0">
-                      <h5 class="col-auto m-0 p-0">이름 :</h5>
+                      <a class="col-auto m-0 p-0" href="">이름 :</a>
                       <button class="like_button col-auto">
-                        <img
-                          src="img/icon/heart.png"
-                          alt="like_button"
-                          class="align-top"
-                        />
+                        <img src="img/icon/heart.png" alt="like_button" />
                       </button>
                     </div>
-                    <p class="card-text">구분 :</p>
-                    <p class="card-text">제조사명 :</p>
+                    <a href="" class="card-text">구분 :</a>
+                    <a href="" class="card-text">제조사명 :</a>
                   </div>
                 </div>
               </div>
@@ -79,17 +69,13 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <div class="card-title row justify-content-between m-0">
-                      <h5 class="col-auto m-0 p-0">이름 :</h5>
+                      <a class="col-auto m-0 p-0" href="">이름 :</a>
                       <button class="like_button col-auto">
-                        <img
-                          src="img/icon/heart.png"
-                          alt="like_button"
-                          class="align-top"
-                        />
+                        <img src="img/icon/heart.png" alt="like_button" />
                       </button>
                     </div>
-                    <p class="card-text">구분 :</p>
-                    <p class="card-text">제조사명 :</p>
+                    <a href="" class="card-text">구분 :</a>
+                    <a href="" class="card-text">제조사명 :</a>
                   </div>
                 </div>
               </div>
@@ -108,23 +94,29 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <div class="card-title row justify-content-between m-0">
-                      <h5 class="col-auto m-0 p-0">이름 :</h5>
+                      <a class="col-auto m-0 p-0" href="">이름 :</a>
                       <button class="like_button col-auto">
-                        <img
-                          src="img/icon/heart.png"
-                          alt="like_button"
-                          class="align-top"
-                        />
+                        <img src="img/icon/heart.png" alt="like_button" />
                       </button>
                     </div>
-                    <p class="card-text">구분 :</p>
-                    <p class="card-text">제조사명 :</p>
+                    <a href="" class="card-text">구분 :</a>
+                    <a href="" class="card-text">제조사명 :</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="nutri_list">
+        <button class="nutri_item">비타민</button>
+        <button class="nutri_item">루테인</button>
+        <button class="nutri_item">콜라겐</button>
+        <button class="nutri_item">칼슘</button>
+        <button class="nutri_item">오메가</button>
+        <button class="nutri_item">유산균</button>
+        <button class="nutri_item">단백질</button>
+        <button class="nutri_item">기타</button>
       </div>
     </div>
   </body>
