--- a/html/index.html
+++ b/html/index.html
@@ -48,13 +48,21 @@
 <div class="banner">
   <div id="banner">
     <img src="/img/benner.jpg" alt="banner">
-    <div for="">당신은 영양제에 대해 얼마나 알고 계신가요? </div>
+    <div for="">나를 아끼자 !
+      <span style="font: 35px extrabold; color: #00997B">이게뭐약?</span>
+    </div>
     <p>
-      1.영양제에 대한 상세한 정보들
+      무분별한 영양제 STOP!
     </p>
     <p>
-      2.우리가 평소에 먹던 영양제는 나에게 필요한 것일까?
+      당신만 모르는 영양제 SELECT!
     </p>
+    <p>
+      내 몸에 달콤한 영양제 SWEET!
+    </p>
+    <a href="">
+      <button>이동하기</button>
+    </a>
   </div>
 </div>
 <br>
@@ -62,19 +70,24 @@
 <!-- start : body  -->
 
 <body>
-  <div class="container">
+  <!-- <div class="container">
     <div id="main_contens">
       <div class="main_context">
-        <p id="sle1"> 모든 영양제에 대해서 이게뭐약? 에서 알려드립니다.
+        <img src="img/main_Photo1.jpg" alt="">
+        <p id="sle1"> PICK YOUR FIVORITE Nutrients
         </p>
-        <button>클릭하기</button>
+        <p>풍요속에 빈곤이다. 풍부한 영양인 시대일 수록 필요한 영양은 챙기지 못한다 영양제는 우리 삶에서 중요한 부분을 채워주는 요소이다. </p>
+        <p>자주 먹는 음식으로만 영양을 채우기에 우리에게 꼭 필요한 영양제는 필수!</p>
+        <p></p>
+        <a href="#">
+          <button>check on</button>
+        </a>
       </div>
-      <img src="img/main_Photo1.jpg" alt="">
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="/js/index.js"></script> -->
   </div>
 </body>
 <br>
