--- a/html/nutri_about.html
+++ b/html/nutri_about.html
@@ -14,8 +14,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="css/footer.css">
 </head>
-</head>
-
 
 <body>
   <main>
@@ -27,7 +25,8 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading fw-normal lh-1">고려은단 비타민C 1000 <span>
+          <h2 class="featurette-heading fw-normal lh-1">고려은단 비타민C 1000 
+            <span>
               <button class="heart-button" aria-label="Heart Button">
                 <i class="fas fa-heart"></i>
               </button>
@@ -90,8 +89,6 @@
         this.classList.toggle('active');
       });
     </script>
-
-
 
 </body>
 
