--- a/html/admin_nutri_add.html
+++ b/html/admin_nutri_add.html
@@ -7,14 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/footer.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/admin_nutri_add.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/admin_nutri_add.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>pill&nutritional</title>
 </head>
 <!-- end : header -->
+<!-- START : navi  -->
 <!-- START : navi  -->
 <nav class="nav nav-pills flex-column flex-sm-row">
   <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="checkbox">
@@ -31,7 +32,7 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/src/main/resources/static/img/logo3.png" alt="">
+    <img src="/img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
     <input type="text" placeholder="영양제 검색">
@@ -44,17 +45,19 @@
 </nav>
 <br>
 <!-- END : navi  -->
+<br>
+<!-- END : navi  -->
 <!-- start : body  -->
 
 <body>
+  <h1>영양제 추가</h1>
   <div class="admin_nutri_add">
-    <h1>영양제 추가</h1>
     <form>
       <table>
         <thead>
           <tr>
             <td>분류 코드:</td>
-            <td><input type="text" name="classifi_code" />
+            <td><input type="text" name="classifi_code" readonly />
               <button id="check_id">중복확인</button>
             </td>
           </tr>
@@ -98,7 +101,7 @@
       </table>
       <div class="button-row">
         <input type="button" value="취소" />
-        <input type="submit" value="확인" />
+        <input type="submit" class="check" value="확인" />
       </div>
     </form>
   </div>
@@ -108,7 +111,7 @@
 <br>
 <footer>
   <div id="f-footer">
-    <img src="/src/main/resources/static/img/footerimg.jpg" alt="이미지">
+    <img src="/img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 Your Company. All rights reserved.</p>
