--- a/html/admin_nutri_edit.html
+++ b/html/admin_nutri_edit.html
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/footer.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/admin_nutri_edit.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/admin_nutri_edit.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>pill&nutritional</title>
 </head>
@@ -31,7 +31,7 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/src/main/resources/static/img/logo3.png" alt="">
+    <img src="/img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
     <input type="text" placeholder="영양제 검색">
@@ -47,8 +47,8 @@
 <!-- start : body  -->
 
 <body>
+  <h1>영양제 수정</h1>
   <div class="admin_nutri_edit">
-    <h1>영양제 수정</h1>
     <form>
       <table>
         <thead>
@@ -97,7 +97,8 @@
       </table>
       <div class="button-row">
         <input type="button" value="취소" />
-        <input type="submit" value="확인" />
+        <input type="submit" class="check" value="확인" />
+        <input type="submit" class="delete" value="삭제" />
       </div>
     </form>
   </div>
@@ -106,7 +107,7 @@
 <!-- START: footer -->
 <footer>
   <div id="f-footer">
-    <img src="/src/main/resources/static/img/footerimg.jpg" alt="이미지">
+    <img src="/img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 Your Company. All rights reserved.</p>
