--- a/html/find_pwd.html
+++ b/html/find_pwd.html
@@ -7,12 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/footer.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/find_pwd.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/find_pwd.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>pill&nutritional</title>
+  <title>비밀번호 찾기</title>
 </head>
 <!-- end : header -->
 <!-- START : navi  -->
@@ -31,7 +31,7 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/src/main/resources/static/img/logo3.png" alt="">
+    <img src="/img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
     <input type="text" placeholder="영양제 검색">
@@ -46,27 +46,35 @@
 <!-- END : navi  -->
 <!-- start : body  -->
 
-<body>
-  <div class="body_main_size">
-    <img src="/src/main/resources/static/img/logo3.png" alt="logo">
-    <div id="reset_pwd">
-      <form action="/user/reset_pwd" method="POST">
-        <h1>비밀번호 찾기</h1>
-        <p>본인확인 이메일 주소와 입력한 이메일 주소가 같아야 비밀번호를 찾을 수 있습니다.</p>
-        <div class="info">
-          <input type="email" id="email" name="email" placeholder="이메일 입력" required>
-          <input type="name" id="name" name="name" placeholder="이름 입력" required>
-          <button type="submit" id="check">확인</button>
+<body class="text-center">
+  <main class="form-signin w-100 m-auto container">
+    <img class="mb-4 logo" src="/img/logo3.png" alt="" width="72" height="57">
+    <h1 class="h1 mb-3 fw-normal">비밀번호 찾기</h1>
+    <div class="form-align">
+      <form>
+        <div class="info-title">이메일</div>
+        <div class="form-floating">
+          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+          <label for="floatingInput">hong@sample.com</label>
+        </div>
+        <div class="info-title">이름</div>
+        <div class="form-floating">
+          <input type="text" class="form-control" id="floatingName" placeholder="이름을 입력해주세요" required>
+          <label for="floatingName">홍길동</label>
+        </div>
+        <div class="form-btn">
+          <button class="w-100 btn btn-lg btn-primary" type="submit">확인</button>
         </div>
       </form>
     </div>
-  </div>
+  </main>
 </body>
+
 <!--END:footer  -->
 <!-- START: footer -->
 <footer>
   <div id="f-footer">
-    <img src="/src/main/resources/static/img/footerimg.jpg" alt="이미지">
+    <img src="img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 Your Company. All rights reserved.</p>
