--- a/bin/main/static/header.html
+++ b/bin/main/static/header.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/footer.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/find_pwd.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>pill&nutritional</title>
@@ -31,7 +31,7 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/src/main/resources/static/img/logo3.png" alt="">
+    <img src="/img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
     <input type="text" placeholder="영양제 검색">
@@ -42,36 +42,3 @@
     <a href="#" id='signup'>회원가입</a>
   </div>
 </nav>
-<br>
-<!-- END : navi  -->
-<!-- start : body  -->
-
-<body>
-  <div class="body_main_size">
-    <img src="/src/main/resources/static/img/logo3.png" alt="logo">
-    <div id="reset_pwd">
-      <form action="/user/reset_pwd" method="POST">
-        <h1>비밀번호 찾기</h1>
-        <p>본인확인 이메일 주소와 입력한 이메일 주소가 같아야 비밀번호를 찾을 수 있습니다.</p>
-        <div class="info">
-          <input type="email" id="email" name="email" placeholder="이메일 입력" required>
-          <input type="name" id="name" name="name" placeholder="이름 입력" required>
-          <button type="submit" id="check">확인</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</body>
-<!--END:footer  -->
-<!-- START: footer -->
-<footer>
-  <div id="f-footer">
-    <img src="/src/main/resources/static/img/footerimg.jpg" alt="이미지">
-    <p>위촉오</p>
-    <div class="copyright">
-      <p>© 2023 Your Company. All rights reserved.</p>
-    </div>
-</footer>
-<!-- END: footer -->
-
-</html>
