Revert "2023.06.09/ HEAD 5~161 간격수정   / / INDEX  5~161 전체 수정 / ADMIN_NUTRI_ADD  5~161 전체 수정 / ADMIN_NUTRI_ADD  5~161 전체 수정 / NUTRI_RESULT  5~161 전체 수정 / FIND_PWD  5~161 전체 수정 / USER_LIKES  5~161 전체 수정 및 찜 기능 추가"
This reverts commit 4f83647accb874d5d469d6e634d189fc237c0611.

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/img/logo3.png" alt="">
+    <img src="img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
     <input type="text" placeholder="영양제 검색">
@@ -47,7 +47,7 @@
 <!-- start:banner -->
 <div class="banner">
   <div id="banner">
-    <img src="/img/benner.jpg" alt="banner">
+    <img src="img/benner.jpg" alt="banner">
     <div for="">나를 아끼자 !
       <span style="font: 35px extrabold; color: #00997B">이게뭐약?</span>
     </div>
@@ -95,7 +95,7 @@
 <!-- start: footer -->
 <footer>
   <div id="f-footer">
-    <img src="/img/footerimg.jpg" alt="이미지">
+    <img src="img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 Your Company. All rights reserved.</p>
