--- a/html/admin_nutri_edit.html
+++ b/html/admin_nutri_edit.html
@@ -7,12 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/footer.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/admin_nutri_edit.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/admin_nutri_edit.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>pill&nutritional</title>
+  <title>관리자 영양제 수정</title>
 </head>
 <!-- end : header -->
 <!-- START : navi  -->
@@ -31,10 +31,10 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/src/main/resources/static/img/logo3.png" alt="">
+    <img src="img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-    <input type="text" placeholder="영양제 검색">
+    <input type="text" placeholder="검색어를 입력하세요">
     <button type="submit"></button>
   </div>
   <div class="flex-sm-fill text-sm-center nav-link" id="util">
@@ -61,33 +61,33 @@
         <tbody>
           <tr>
             <td>구분:</td>
-            <td><input type="text" name="category" /></td>
+            <td><input type="text" name="category" placeholder="내용을 입력해주세요"/></td>
             <td>제조사:</td>
-            <td><input type="text" name="manufacturer" /></td>
+            <td><input type="text" name="manufacturer" placeholder="내용을 입력해주세요"/></td>
           </tr>
           <tr>
             <td>주성분:</td>
-            <td><input type="text" name="main_ingredient" /></td>
+            <td><input type="text" name="main_ingredient" placeholder="내용을 입력해주세요"/></td>
             <td>효능:</td>
-            <td><input type="text" name="effect" /></td>
+            <td><input type="text" name="effect" placeholder="내용을 입력해주세요"/></td>
           </tr>
         </tbody>
         <tr>
           <td>복용법:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="dosage" maxlength="500" placeholder="복용법"></textarea>
+            <textarea name="dosage" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
           </td>
         </tr>
         <tr>
           <td>주의사항:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="caution" maxlength="500" placeholder="주의 사항"></textarea>
+            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
           </td>
         </tr>
         <tr>
           <td>기타:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="others" maxlength="500" placeholder="기타"></textarea>
+            <textarea name="others" maxlength="500" placeholder="내용을 입력해주세요"></textarea>
           </td>
         </tr>
         <tr>
@@ -97,7 +97,8 @@
       </table>
       <div class="button-row">
         <input type="button" value="취소" />
-        <input type="submit" value="확인" />
+        <input type="submit" class="check" value="확인" />
+        <input type="submit" class="delete" value="삭제" />
       </div>
     </form>
   </div>
@@ -106,7 +107,7 @@
 <!-- START: footer -->
 <footer>
   <div id="f-footer">
-    <img src="/src/main/resources/static/img/footerimg.jpg" alt="이미지">
+    <img src="img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 Your Company. All rights reserved.</p>
