--- a/html/find_pwd.html
+++ b/html/find_pwd.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/footer.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/find_pwd.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/find_pwd.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>pill&nutritional</title>
@@ -31,10 +31,10 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/src/main/resources/static/img/logo3.png" alt="">
+    <img src="img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-    <input type="text" placeholder="영양제 검색">
+    <input type="text" placeholder="검색어를 입력하세요">
     <button type="submit"></button>
   </div>
   <div class="flex-sm-fill text-sm-center nav-link" id="util">
@@ -48,7 +48,7 @@
 
 <body>
   <div class="body_main_size">
-    <img src="/src/main/resources/static/img/logo3.png" alt="logo">
+    <img src="img/logo3.png" alt="logo">
     <div id="reset_pwd">
       <form action="/user/reset_pwd" method="POST">
         <h1>비밀번호 찾기</h1>
@@ -66,7 +66,7 @@
 <!-- START: footer -->
 <footer>
   <div id="f-footer">
-    <img src="/src/main/resources/static/img/footerimg.jpg" alt="이미지">
+    <img src="img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 Your Company. All rights reserved.</p>
