--- a/html/footer.html
+++ b/html/footer.html
@@ -2,7 +2,7 @@
 <!-- START: footer -->
 <footer>
   <div id="f-footer">
-    <img src="/img/footerimg.jpg" alt="이미지">
+    <img src="img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
       <p>© 2023 Your Company. All rights reserved.</p>
