--- a/html/header.html
+++ b/html/header.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>pill&nutritional</title>
+  <title>??</title>
 </head>
 <!-- end : header -->
 <!-- START : navi  -->
@@ -31,10 +31,10 @@
     </div>
   </div>
   <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/img/logo3.png" alt="">
+    <img src="img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-    <input type="text" placeholder="영양제 검색">
+    <input type="text" placeholder="검색어를 입력하세요">
     <button type="submit"></button>
   </div>
   <div class="flex-sm-fill text-sm-center nav-link" id="util">
