--- a/html/index.html
+++ b/html/index.html
@@ -47,21 +47,22 @@
 <!-- start:banner -->
 <div class="banner">
   <div id="banner">
-<<<<<<< HEAD
     <img src="img/benner.jpg" alt="banner">
     <div for="">나를 아끼자 !
       <span style="font: 35px extrabold; color: #00997B">이게뭐약?</span>
     </div>
-=======
-    <img src="/img/benner.jpg" alt="banner">
-    <div for="">당신은 영양제에 대해 얼마나 알고 계신가요? </div>
->>>>>>> 1ce160a086a4fe2032810356addcb107ebbf1cf9
     <p>
-      1.영양제에 대한 상세한 정보들
+      무분별한 영양제 STOP!
     </p>
     <p>
-      2.우리가 평소에 먹던 영양제는 나에게 필요한 것일까?
+      당신만 모르는 영양제 SELECT!
     </p>
+    <p>
+      내 몸에 달콤한 영양제 SWEET!
+    </p>
+    <a href="">
+      <button>이동하기</button>
+    </a>
   </div>
 </div>
 <br>
