--- a/html/header.html
+++ b/html/header.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
   </div>
-  <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
+  <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/" id="logo">
     <img src="img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
@@ -42,3 +42,5 @@
     <a href="#" id='signup'>회원가입</a>
   </div>
 </nav>
+<br>
+<!-- END : navi  -->
