--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
   </div>
-  <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
+  <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/" id="logo">
     <img src="img/logo3.png" alt="">
   </a>
   <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
@@ -98,7 +98,7 @@
     <img src="img/footerimg.jpg" alt="이미지">
     <p>위촉오</p>
     <div class="copyright">
-      <p>© 2023 Your Company. All rights reserved.</p>
+      <p>© 2023 이게뭐약 Company. All rights reserved.</p>
     </div>
 </footer>
 <!-- end: footer -->
