230611-index 포함 모든 html 파일,bootstrap.css, header.css, join.css, styles.css, user_menu.css, img파일1개 - 모든 html파일 헤더 및 푸터 추가, 불필요한 link 삭제, png 파일 1개 추가

--- a/html/admin_nutri_list.html
+++ b/html/admin_nutri_list.html
@@ -9,6 +9,7 @@
     <title>영양제 관리</title>
   </head>
   <body>
+    <div id="header-placeholder"></div>
     <div class="container-lg">
       <h2>영양제 관리</h2>
       <form action="/nutri/result" class>
@@ -44,5 +45,20 @@
         </table>
       </div>
     </div>
+
+    <div id="footer-placeholder"></div>
+    <script>
+      fetch('header.html')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('header-placeholder').innerHTML = html;
+        });
+  
+      fetch('footer.html')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('footer-placeholder').innerHTML = html;
+        });
+    </script>
   </body>
 </html>
