--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,16 @@
-<!--END:body  -->
-<!-- START: footer -->
+<!DOCTYPE html>
+<html lang="kr">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <title>footer</title>
+</head>
+
 <footer>
   <div id="f-footer">
     <img src="img/footerimg.jpg" alt="이미지">
