--- a/html/admin_nutri_add.html
+++ b/html/admin_nutri_add.html
@@ -14,39 +14,10 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>관리자 영양제 추가</title>
 </head>
-<!-- end : header -->
-<!-- START : navi  -->
-<nav class="nav nav-pills flex-column flex-sm-row">
-  <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="checkbox">
-    <input type="checkbox" id="icon">
-    <label for="icon" id="icon">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-    <div id="in_navi">
-      <ul>
-        <li><a href="#">의약품 찾기</a></li>
-      </ul>
-    </div>
-  </div>
-  <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="img/logo3.png" alt="">
-  </a>
-  <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-    <input type="text" placeholder="검색어를 입력하세요">
-    <button type="submit"></button>
-  </div>
-  <div class="flex-sm-fill text-sm-center nav-link" id="util">
-    <a href="#" id="logoin">로그인</a>
-    <a href="#" id='signup'>회원가입</a>
-  </div>
-</nav>
-<br>
-<!-- END : navi  -->
-<!-- start : body  -->
 
 <body>
+  <div id="header-placeholder"></div>
+
   <div class="admin_nutri_add">
     <h1>영양제 추가</h1>
     <form>
@@ -54,7 +25,7 @@
         <thead>
           <tr>
             <td>분류 코드:</td>
-            <td><input type="text" name="classifi_code" placeholder="내용을 입력해주세요"/>
+            <td><input type="text" name="classifi_code" placeholder="내용을 입력해주세요" />
               <button id="check_id">중복확인</button>
             </td>
           </tr>
@@ -102,16 +73,20 @@
       </div>
     </form>
   </div>
+  <div id="footer-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('header-placeholder').innerHTML = html;
+      });
+
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('footer-placeholder').innerHTML = html;
+      });
+  </script>
 </body>
 
-<!-- start: footer -->
-<br>
-<footer>
-  <div id="f-footer">
-    <img src="img/footerimg.jpg" alt="이미지">
-    <p>위촉오</p>
-    <div class="copyright">
-      <p>© 2023 Your Company. All rights reserved.</p>
-    </div>
-</footer>
-<!-- end: footer -->
+</html>
