--- a/html/header.html
+++ b/html/header.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="kr">
-<!-- START : header -->
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>??</title>
+  <link rel="stylesheet" href="css/header.css">
+  <title>header</title>
 </head>
-<!-- end : header -->
-<!-- START : navi  -->
-<nav class="nav nav-pills flex-column flex-sm-row">
-  <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="checkbox">
-    <input type="checkbox" id="icon">
-    <label for="icon" id="icon">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-    <div id="in_navi">
-      <ul>
-        <li><a href="#">의약품 찾기</a></li>
-      </ul>
+
+<header id="header">
+
+  <nav class="nav nav-pills flex-column flex-sm-row">
+    <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="checkbox">
+      <input type="checkbox" id="icon">
+      <label for="icon" id="icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      <div id="in_navi">
+        <ul>
+          <li><a href="#">의약품 찾기</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/" id="logo">
-    <img src="img/logo3.png" alt="">
-  </a>
-  <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-    <input type="text" placeholder="검색어를 입력하세요">
-    <button type="submit"></button>
-  </div>
-  <div class="flex-sm-fill text-sm-center nav-link" id="util">
-    <a href="#" id="logoin">로그인</a>
-    <a href="#" id='signup'>회원가입</a>
-  </div>
-</nav>
-<br>
-<!-- END : navi  -->
+    <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/" id="logo">
+      <img src="img/logo3.png" alt="">
+    </a>
+    <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
+      <input type="text" placeholder="검색어를 입력하세요">
+      <button type="submit"></button>
+    </div>
+    <div class="flex-sm-fill text-sm-center nav-link" id="util">
+      <a href="#" id="logoin">로그인</a>
+      <a href="#" id='signup'>회원가입</a>
+    </div>
+  </nav>
+  <br>
+</header>
