--- a/html/login.html
+++ b/html/login.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <div id="header-placeholder"></div>
     <div class="container-lg">
       <div class="login_form_title">
-        <h1>
-          <img src="img/logo/로고최종.png" alt="logo" class="logo" />
-        </h1>
+
         <h2>로그인</h2>
       </div>
       <div class="login_form">
@@ -48,5 +47,19 @@
         </form>
       </div>
     </div>
+    <div id="footer-placeholder"></div>
+    <script>
+      fetch('header.html')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('header-placeholder').innerHTML = html;
+        });
+  
+      fetch('footer.html')
+        .then(response => response.text())
+        .then(html => {
+          document.getElementById('footer-placeholder').innerHTML = html;
+        });
+    </script>
   </body>
 </html>
