--- a/html/user_likes.html
+++ b/html/user_likes.html
@@ -7,46 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/src/main/resources/static/css/header.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/footer.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/user_likes.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/user_likes.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>pill&nutritional</title>
 </head>
-<!-- end : header -->
-<!-- START : navi  -->
-<nav class="nav nav-pills flex-column flex-sm-row">
-  <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="checkbox">
-    <input type="checkbox" id="icon">
-    <label for="icon" id="icon">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-    <div id="in_navi">
-      <ul>
-        <li><a href="#">의약품 찾기</a></li>
-      </ul>
-    </div>
-  </div>
-  <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-    <img src="/src/main/resources/static/img/logo3.png" alt="">
-  </a>
-  <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-    <input type="text" placeholder="영양제 검색">
-    <button type="submit"></button>
-  </div>
-  <div class="flex-sm-fill text-sm-center nav-link" id="util">
-    <a href="#" id="logoin">로그인</a>
-    <a href="#" id='signup'>회원가입</a>
-  </div>
-</nav>
-<br>
-<!-- END : navi  -->
-<!-- STRAT:body -->
-
 <body>
+<!-- end : header -->  <div id="header-placeholder"></div>
   <div id="main_likes">
     <h1>
       <label for="" id="main_title">내가 찜한 목록</label>
@@ -56,12 +23,12 @@
     <form action="">
       <table>
         <tr>
-          <td><img src="/src/main/resources/static/img/pill.png" alt="{{pill_img.png}}"></td>
+          <td><img src="/img/pill.png" alt="{{pill_img.png}}"></td>
           <td>
           <th>
             <label for="" id="name">제품명:<span th:text='${name}'>인사돌정</span></label>
-            <button class="like-button"><img src="/src/main/resources/static/img/heart nop.png" alt=""></button>
-            <button class="non-like-button"><img src="/src/main/resources/static/img/heart ful.png" alt=""></button>
+            <button class="like-button"><img src="/img/heart nop.png" alt=""></button>
+            <button class="non-like-button"><img src="/img/heart ful.png" alt=""></button>
             <br>
             <label for="" id="nutri_contens">구분: <span th:text='${content}'>치통</span></label>
             <br>
@@ -72,16 +39,19 @@
       </table>
     </form>
   </div>
+  <div id="footer-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('header-placeholder').innerHTML = html;
+      });
+
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('footer-placeholder').innerHTML = html;
+      });
+  </script>
 </body>
-<!-- END:body -->
-<!-- START: footer -->
-<br>
-<footer>
-  <div id="f-footer">
-    <img src="/src/main/resources/static/img/footerimg.jpg" alt="이미지">
-    <p>위촉오</p>
-    <div class="copyright">
-      <p>© 2023 Your Company. All rights reserved.</p>
-    </div>
-</footer>
-<!-- END: footer -->
+
