--- a/html/user_menu.html
+++ b/html/user_menu.html
@@ -14,28 +14,40 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="box"></div>
-    <div class="box">
-      <h1>회원 가입</h1>
-    </div>
-    <div class="box">
-      <div class="image-box">
+  <div id="header-placeholder"></div>
+  <div class="container-lg">
+    <h2>마이페이지</h2>
+
+    <div class="user_menu_list">
+      <button class="nutri_item user_menu">
         <a href="">
           <img src="/img/user2-removebg-preview.png" alt="Image 1">
         </a>
-        <button type="button" class="w-100 btn btn-lg btn-primary">내가찜한목록</button>
-      </div>
-      <div class="image-box">
+        <p>내가찜한목록</p>
+      </button>
+      <button class="nutri_item user_menu">
         <a href="">
-          <img src="/img/user1-removebg-preview.png" alt="Image 2">
+          <img src="/img/user1-removebg-preview.png" alt="Image 1">
         </a>
-        <button type="button" class="w-100 btn btn-lg btn-primary">회원정보수정</button>
-      </div>
+        <p>회원정보수정</p>
+      </button>
     </div>
-    <div class="box"></div>
-    <div class="box"></div>
   </div>
+
+  <div id="footer-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('header-placeholder').innerHTML = html;
+      });
+
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('footer-placeholder').innerHTML = html;
+      });
+  </script>
 </body>
 
 
