--- a/html/header.html
+++ b/html/header.html
@@ -24,7 +24,7 @@
       </label>
       <div id="in_navi">
         <ul>
-          <li><a href="#">의약품 찾기</a></li>
+          <li><a href="#" style="font-family: 'NanumSquareNeo-Variable';">의약품 찾기</a></li>
         </ul>
       </div>
     </div>
@@ -32,12 +32,12 @@
       <img src="img/logo3.png" alt="">
     </a>
     <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-      <input type="text" placeholder="검색어를 입력하세요">
+      <input type="text" placeholder="검색어를 입력하세요" style="font-family: 'NanumSquareNeo-Variable';">
       <button type="submit"></button>
     </div>
     <div class="flex-sm-fill text-sm-center nav-link" id="util">
-      <a href="#" id="logoin">로그인</a>
-      <a href="#" id='signup'>회원가입</a>
+      <a href="#" id="logoin" style="font-family: 'NanumSquareNeo-Variable';">로그인</a>
+      <a href="#" id='signup' style="font-family: 'NanumSquareNeo-Variable';">회원가입</a>
     </div>
   </nav>
   <br>
