230613-admin_nutri_add.html, admin_nutri_edit.html, header.html, header.css-관리자 페이지 추가 수정에 이름 추가, 헤더 css 수정

--- a/html/admin_nutri_edit.html
+++ b/html/admin_nutri_edit.html
@@ -25,6 +25,9 @@
             <td>분류 코드:</td>
             <td><input type="text" name="classifi_code" readonly th:value="${nutri.id}" required />
             </td>
+            <td>이름:</td>
+            <td><input type="text" name="nutri_name" placeholder="내용을 입력해주세요" />
+            </td>
           </tr>
         </thead>
         <tbody>
