--- a/html/header.html
+++ b/html/header.html
@@ -24,12 +24,12 @@
       </label>
       <div id="in_navi">
         <ul>
-          <li><a href="#" style="font-family: 'NanumSquareNeo-Variable';">의약품 찾기</a></li>
+          <li><a href="#" style="font-family: 'NanumSquareNeo-Variable';">영양제 찾기</a></li>
         </ul>
       </div>
     </div>
-    <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/" id="logo">
-      <img src="img/logo3.png" alt="">
+    <a class="text-sm-center nav-link" aria-current="page" href="/" id="logo">
+      <img class="logo" src="img/logo3.png" alt="">
     </a>
     <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
       <input type="text" placeholder="검색어를 입력하세요" style="font-family: 'NanumSquareNeo-Variable';">
