--- a/html/index.html
+++ b/html/index.html
@@ -24,17 +24,20 @@
   <div class="banner">
     <div id="banner">
       <img src="img/benner.jpg" alt="banner">
-      <div for="">건강해지는 질문,
-        <span style="font-family: 35px extrabold 'NanumSquareNeo-Variable'; color: #00997B">이게뭐약?</span>
+      <div for="">나를 아끼자 !
+        <span style="font: 35px extrabold; color: #00997B">이게뭐약?</span>
       </div>
       <p>
-        간편한 검색과 스마트한 분석을 통한 맞춤 서비스로
+        무분별한 영양제 STOP!
       </p>
       <p>
-        이게뭐약에서 당신의 건강을 완성해보세요!
+        당신만 모르는 영양제 SELECT!
+      </p>
+      <p>
+        내 몸에 달콤한 영양제 SWEET!
       </p>
       <a href="">
-        <button>바로가기</button>
+        <button>이동하기</button>
       </a>
     </div>
   </div>
