--- a/html/nutri_result.html
+++ b/html/nutri_result.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="css/nutri_result.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>pill&nutritional</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <title>영양제 검색 결과</title>
 </head>
 <div id="header-placeholder"></div>
 
@@ -26,31 +27,36 @@
   </div>
   <div id="nutri_main">
     <h1>
-      <label for="" id="main_title" th:text="'${nutri_name}">''검색 결과</label>
+      <label for="" id="main_title">영양제 검색 결과</label>
     </h1>
+    <!-- START THE FEATURETTES -->
+    <div class="main-likes">
+      <img src="img/nutri.jpg" id="product">
+      <ul class="text_context">
+        <li>
+          <label for="" id="name">제품명:<span th:text='${name}'>고려은단 비타민C 1000</span></label>
+          <span>
+            <button class="heart-button" aria-label="Heart Button">
+              <i class="fas fa-heart"></i>
+            </button>
+          </span>
+        </li>
+        <li>
+          <label for="" id="nutri_contens">구분: <span th:text='${content}'>비타민C</span></label>
+        </li>
+        <li>
+          <label for="" id="nutri_compeny">제조사: <span th:text='${company}'>고려은단</span></label>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="nutri_product">
-    <form action="">
-      <table>
-        <tr>
-          <td><img src="/img/nutri.jpg" alt="{{nutri_img.png}}"></td>
-          <td>
-          <th>
-            <label for="" id="nutri_name">제품명:<span th:text='${name}'>고려은단 비타민C 1000</span>
-            </label>
-            <button class="like-button"><img src="/img/heart nop.png" alt=""></button>
-            <button class="non-like-button"><img src="/img/heart ful.png" alt=""></button>
-            <br>
-            <label for="" id="nutri_contens">구분: <span th:text='${content}'>비타민C</span></label>
-            <br>
-            <label for="" id="nutri_compeny">제조사: <span th:text='${company}'>고려은단</span></label>
-          </th>
-          </td>
-        </tr>
-      </table>
-    </form>
+  <div class="col-md-5 order-md-1">
+    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+      xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false">
+    </svg>
   </div>
   <div id="footer-placeholder"></div>
+  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     fetch('header.html')
       .then(response => response.text())
@@ -63,5 +69,9 @@
       .then(html => {
         document.getElementById('footer-placeholder').innerHTML = html;
       });
+    const heartButton = document.querySelector('.heart-button');
+    heartButton.addEventListener('click', function () {
+      this.classList.toggle('active');
+    });
   </script>
 </body>
