--- a/html/find_pwd.html
+++ b/html/find_pwd.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/find_pwd.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>비밀번호 찾기</title>
+  <title>pill&nutritional</title>
 </head>
 
 <body>
